--- a/web/WebApplication1/WebApplication1/index.html
+++ b/web/WebApplication1/WebApplication1/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-5">
                     <h3>Nouvel Algorithme</h3>
-                    <a ng-click="toggle = !toggle" class="btn btn-primary" href="/HtmlPage.html#?sentinel={{sentinelName}}">
+                    <a ng-click="toggle = !toggle" class="btn btn-primary" href="/algorithme.html#?sentinel={{sentinelName}}">
                         Créer <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                 </div>
@@ -102,7 +102,7 @@
                             <h3>{{algo.Name}}</h3>
                             <h4>Description</h4>
                             <p>{{algo.Description}}</p>
-                            <a class="btn btn-primary" href="/HtmlPage.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
+                            <a class="btn btn-primary" href="/algorithme.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
                                 Voir Algorithme <span class="glyphicon glyphicon-chevron-right"></span>
                             </a>
                         </div>
@@ -121,7 +121,7 @@
                             <h3>{{algo.Name}}</h3>
                             <h4>Description</h4>
                             <p>{{algo.Description}}</p>
-                            <a class="btn btn-primary" href="/HtmlPage.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
+                            <a class="btn btn-primary" href="/algorithme.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
                                 Voir Algorithme <span class="glyphicon glyphicon-chevron-right"></span>
                             </a>
                         </div>
@@ -143,7 +143,7 @@
                             <h3>{{algo.Name}}</h3>
                             <h4>Description</h4>
                             <p>{{algo.Description}}</p>
-                            <a class="btn btn-primary" href="/HtmlPage.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
+                            <a class="btn btn-primary" href="/algorithme.html#?name={{algo.Name}}&sentinel={{sentinelName}}">
                                 Voir Algorithme <span class="glyphicon glyphicon-chevron-right"></span>
                             </a>
                         </div>
